Fixed name in examples

--- a/examples/index.html
+++ b/examples/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>@barcode</title>
+  <title>@es-barcodes</title>
   <meta name="description" content="An experimental set of modules for rendering bar-codes">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header class="header">
-  <h1>@barcode</h1>
+  <h1>@es-barcodes</h1>
   <p class="description">An experimental set of modules for rendering bar-codes.</p>
 </header>
 <section>
